[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cryptoparam"
version = "0.1.0"
description = "Plain LWE security estimator (Rust core with Python bindings)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]
keywords = ["cryptography", "lattice", "LWE", "security", "post-quantum"]

[project.scripts]
cryptoparam = "cryptoparam:_cli_main"

[tool.maturin]
features = ["pyo3/extension-module"]
